# mpeg-audio-header

./: .codespellignore  .commitlintrc.json.license  .gitignore  .justfile  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .prettierrc.yaml  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yaml
.github/workflows/: continuous-integration.yaml  pre-commit.yaml  security-audit.yaml
src/: error.rs  frame.rs  lib.rs  reader.rs  tests.rs
test-data/getID3-testfiles/MP1/: .keep
test-data/getID3-testfiles/MP2/: .keep
test-data/getID3-testfiles/mp3/: .keep
test-data/minimp3/fuzz/: .keep
test-data/minimp3/performance/: .keep
test-data/mp3-duration/: .keep
test-data/samples.ffmpeg.org/A-codecs/: .keep
test-data/samples.ffmpeg.org/A-codecs/MP3/: .keep
test-data/samples.ffmpeg.org/A-codecs/mp2-bug/: .keep
tests/: public_api.rs
