# SPDX-FileCopyrightText: The mpeg-audio-header authors
# SPDX-License-Identifier: MPL-2.0

[package]
name = "mpeg-audio-header"
description = "An all-you-can-eat parser for MPEG audio metadata"
version = "0.0.6"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/uklotzde/mpeg-audio-header"
keywords = ["audio", "metadata", "mpeg", "mp3"]
categories = ["multimedia::audio"]
edition = "2021"

[dependencies]
thiserror = "1.0.38"

[dev-dependencies]
anyhow = "1.0.68"
walkdir = "2.3.2"
